src/main/kubernetes/operator/deployment/ec-operator.dep.api.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: ec-operator-webhook
webhooks:
  - name: operator.enonic.cloud
    rules:
      - apiGroups: ["enonic.cloud"]
        operations: ["*"]
        apiVersions: ["*"]
        resources: ["xp7deployments", "xp7vhosts"]
        scope: "*"
    admissionReviewVersions: ["v1", "v1beta1"]
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 5
    clientConfig:
      caBundle: "{CA_CERT}"
      service:
        name: kubernetes
        namespace: default
        path: /apis/operator.enonic.cloud/v1alpha1/admission/validate
